syntax = "proto2";

package squareup.subzero.wallet;

option java_package = "com.squareup.protos.subzero.wallet";

import "common.proto";

/**
 * The wallet file lives on the Plutus host machine's hard drive. It is also backed up to a USB
 * drive.
 *
 * The protobuf is serialized using JSON. The field names therefore matter, their numbering does
 * not.
 */

message Wallet {
  enum Currency {
    DEFAULT_CURRENCY_DO_NOT_USE = 0;
    TEST_NET = 1;
    MAIN_NET = 2;
  }

  optional Currency currency = 1;
  optional string ocs_id = 2;
  optional bytes ocs_cards_file = 3;
  optional bytes ocs_card_one_file = 4;
  optional string master_seed_encryption_key_id = 5;
  optional bytes master_seed_encryption_key_file = 6;
  optional service.EncryptedMasterSeed encrypted_master_seed = 7;
  repeated service.EncryptedPubKey encrypted_pub_keys = 8;
}
